fix: mobile qa1

--- a/src/pug/includes/footer-full.pug
+++ b/src/pug/includes/footer-full.pug
@@ -9,13 +9,13 @@ footer.footer
 
                 .footer--redes 
                     a(href="#!", target="_blank", rel="noopener noreferrer") 
-                        img.ing-fluid(src="../img/instagram-solid.svg", alt="")
+                        img.ing-fluid(src="img/instagram-solid.svg", alt="")
 
                     a(href="#!", target="_blank", rel="noopener noreferrer") 
-                        img.ing-fluid(src="../img/icon-fb.svg", alt="")
+                        img.ing-fluid(src="img/icon-fb.svg", alt="")
 
                     a(href="#!", target="_blank", rel="noopener noreferrer") 
-                        img.ing-fluid(src="../img/icon-in.svg", alt="")
+                        img.ing-fluid(src="img/icon-in.svg", alt="")
 
 
             .col-lg-4.col-12.footer--connect(data-bs-toggle="modal", data-bs-target="#exampleModal")
