--- a/src/pug/includes/head.pug
+++ b/src/pug/includes/head.pug
@@ -27,6 +27,8 @@ html(lang="es")
 
 
         <!-- GLOBALS -->
+        script(src="js/forms.min.js" defer)
+
         link(rel="stylesheet", type="text/css", href="css/styles.min.css")
         link(rel='preconnect', href='https://fonts.googleapis.com')
         link(rel='preconnect', href='https://fonts.gstatic.com' crossorigin)
