--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -7,7 +7,7 @@ header.header
 
             .col-lg-10.col-6.header--navegacion.d-flex
                 nav
-                    button.btn-search(data-bs-toggle='collapse', data-bs-target='#searchNav', aria-controls='searchNavContent', aria-expanded='false', aria-label='Toggle navigation')
+                    button.btn-search#btn-search-header(data-bs-toggle='collapse', data-bs-target='#searchNav', aria-controls='searchNavContent', aria-expanded='false', aria-label='Toggle navigation')
 
                     .btn-ham(data-bs-toggle='collapse', data-bs-target='#navbarNav', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
                         span.ham-top
