--- a/src/pug/project-detail.pug
+++ b/src/pug/project-detail.pug
@@ -77,23 +77,23 @@ block content
                         .swiper.slider-detail
                             .swiper-wrapper
                                 .swiper-slide
-                                    a(href="img/layout6.jpg", data-lightbox="galeria-desktop")
+                                    a(href="img/layout5.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout5.jpg' alt)
 
-                                    a(href="img/layout6.jpg", data-lightbox="galeria-desktop")
+                                    a(href="img/layout2.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout2.jpg' alt)
 
-                                    a(href="img/layout6.jpg", data-lightbox="galeria-desktop")
+                                    a(href="img/layout3.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout3.jpg' alt)
 
-                                    a(href="img/layout6.jpg", data-lightbox="galeria-desktop")
+                                    a(href="img/layout.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout.jpg' alt)
 
-                                    a(href="img/layout6.jpg", data-lightbox="galeria-desktop")
+                                    a(href="img/layout4.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout4.jpg' alt)
 
@@ -102,23 +102,23 @@ block content
                                             img.img-fluid(src='img/layout6.jpg' alt)
 
                                 .swiper-slide
-                                    a(href="img/layout6.jpg", data-lightbox="galeria-desktop")
+                                    a(href="img/layout5.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout5.jpg' alt)
 
-                                    a(href="img/layout6.jpg", data-lightbox="galeria-desktop")
+                                    a(href="img/layout2.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout2.jpg' alt)
 
-                                    a(href="img/layout6.jpg", data-lightbox="galeria-desktop")
+                                    a(href="img/layout3.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout3.jpg' alt)
 
-                                    a(href="img/layout6.jpg", data-lightbox="galeria-desktop")
+                                    a(href="img/layout.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout.jpg' alt)
 
-                                    a(href="img/layout6.jpg", data-lightbox="galeria-desktop")
+                                    a(href="img/layout4.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout4.jpg' alt)
 
@@ -140,7 +140,7 @@ block content
 
                 .row 
                     .col-lg-4
-                        a(href='#!')
+                        a(href='project-home.html')
                             .projects-home__card.d-flex.tipo-uno(categoria='Typology')
                                 .projects-home__card__images
                                     .projects-home__card__images__img(titulo='Worl Trade Center')
@@ -171,7 +171,7 @@ block content
                                     h4 Typology
 
                     .col-lg-4
-                        a(href)
+                        a(href="project-home.html")
                             .projects-home__card.d-flex.tipo-dos(categoria='Contrast')
                                 .projects-home__card__images
                                     .projects-home__card__images__img
@@ -202,7 +202,7 @@ block content
                                     h4 Contrast
 
                     .col-lg-4
-                        a(href)
+                        a(href="project-home.html")
                             .projects-home__card.d-flex.tipo-uno(categoria='Terrain')
                                 .projects-home__card__images
                                     .projects-home__card__images__img
