--- a/src/pug/projects.pug
+++ b/src/pug/projects.pug
@@ -13,8 +13,8 @@ block content
             h1.text-center PROJECTS
             .container-fluid
                 .row
-                    .col-lg-4.col-6
-                        a(href='#!')
+                    .col-lg-4.col-12
+                        a(href='project-home.html')
                             .projects-home__card.d-flex.tipo-uno(categoria='Typology')
                                 .projects-home__card__images
                                     .projects-home__card__images__img(titulo='Worl Trade Center')
@@ -44,8 +44,8 @@ block content
 
                                     h4 Typology
 
-                    .col-lg-4.col-6
-                        a(href)
+                    .col-lg-4.col-12
+                        a(href="project-home.html")
                             .projects-home__card.d-flex.tipo-dos(categoria='Contrast')
                                 .projects-home__card__images
                                     .projects-home__card__images__img
@@ -75,8 +75,8 @@ block content
 
                                     h4 Contrast
 
-                    .col-lg-4.col-6
-                        a(href)
+                    .col-lg-4.col-12
+                        a(href="project-home.html")
                             .projects-home__card.d-flex.tipo-uno(categoria='Terrain')
                                 .projects-home__card__images
                                     .projects-home__card__images__img
@@ -106,8 +106,8 @@ block content
 
                                     h4 Terrain
 
-                    .col-lg-4.col-6
-                        a(href)
+                    .col-lg-4.col-12
+                        a(href="project-home.html")
                             .projects-home__card.d-flex.tipo-tres(categoria='Environment')
                                 .projects-home__card__images
                                     .projects-home__card__images__img
@@ -137,8 +137,8 @@ block content
 
                                     h4 Environment
 
-                    .col-lg-4.col-6
-                        a(href)
+                    .col-lg-4.col-12
+                        a(href="project-home.html")
                             .projects-home__card.d-flex.tipo-cuatro(categoria='Imagination')
                                 .projects-home__card__images
                                     .projects-home__card__images__img
@@ -168,8 +168,8 @@ block content
 
                                     h4 Imagination
 
-                    .col-lg-4.col-6
-                        a(href='#!')
+                    .col-lg-4.col-12
+                        a(href="project-home.html")
                             .projects-home__card.d-flex.tipo-uno(categoria='Typology')
                                 .projects-home__card__images
                                     .projects-home__card__images__img(titulo='Worl Trade Center')
@@ -199,8 +199,8 @@ block content
 
                                     h4 Typology
 
-                    .col-lg-4.col-6
-                        a(href)
+                    .col-lg-4.col-12
+                        a(href="project-home.html")
                             .projects-home__card.d-flex.tipo-dos(categoria='Contrast')
                                 .projects-home__card__images
                                     .projects-home__card__images__img
@@ -230,8 +230,8 @@ block content
 
                                     h4 Contrast
 
-                    .col-lg-4.col-6
-                        a(href)
+                    .col-lg-4.col-12
+                        a(href="project-home.html")
                             .projects-home__card.d-flex.tipo-uno(categoria='Terrain')
                                 .projects-home__card__images
                                     .projects-home__card__images__img
@@ -261,8 +261,8 @@ block content
 
                                     h4 Terrain
 
-                    .col-lg-4.col-6
-                        a(href)
+                    .col-lg-4.col-12
+                        a(href="project-home.html")
                             .projects-home__card.d-flex.tipo-tres(categoria='writing')
                                 .projects-home__card__images
                                     .projects-home__card__images__img
@@ -292,8 +292,8 @@ block content
 
                                     h4 writing
 
-                    .col-lg-4.col-6
-                        a(href)
+                    .col-lg-4.col-12
+                        a(href="project-home.html")
                             .projects-home__card.d-flex.tipo-uno(categoria='Terrain')
                                 .projects-home__card__images
                                     .projects-home__card__images__img
@@ -323,8 +323,8 @@ block content
 
                                     h4 Terrain
 
-                    .col-lg-4.col-6
-                        a(href)
+                    .col-lg-4.col-12
+                        a(href="project-home.html")
                             .projects-home__card.d-flex.tipo-tres(categoria='Environment')
                                 .projects-home__card__images
                                     .projects-home__card__images__img
@@ -354,8 +354,8 @@ block content
 
                                     h4 Environment
 
-                    .col-lg-4.col-6
-                        a(href='#!')
+                    .col-lg-4.col-12
+                        a(href="project-home.html")
                             .projects-home__card.d-flex.tipo-uno(categoria='Typology')
                                 .projects-home__card__images
                                     .projects-home__card__images__img(titulo='Worl Trade Center')
