--- a/src/scss/core/_vars.scss
+++ b/src/scss/core/_vars.scss
@@ -24,16 +24,17 @@
     // --tercera-regular: "hanson-bold", sans-serif;
 
     --txt-big: calc(84px + 100 * ((100vw - 1920px) / 1280)); //
-    --h1: calc(90px + 78 * ((100vw - 1920px) / 1280)); //
-    --xl: calc(60px + 52 * ((100vw - 1920px) / 1280)); ///
-    --h1-1: calc(52px + 78 * ((100vw - 1920px) / 1280)); //
+    --h1: calc(90px + 60 * ((100vw - 1920px) / 1280)); //
+    --xxl: calc(78px + 50 * ((100vw - 1920px) / 1280)); //
+    --xl: calc(60px + 44 * ((100vw - 1920px) / 1280)); ///
+    --h1-1: calc(52px + 38 * ((100vw - 1920px) / 1280)); //
     --h3: calc(44px + 36 * ((100vw - 1920px) / 1280)); ///
-    --h2: calc(40px + 60 * ((100vw - 1920px) / 1280)); ///
+    --h2: calc(40px + 20 * ((100vw - 1920px) / 1280)); ///
     --ls: calc(30px + 10 * ((100vw - 1920px) / 1280)); ///
     --h4: calc(24px + 10 * ((100vw - 1920px) / 1280)); ///
     --l: calc(20px + 10 * ((100vw - 1920px) / 1280)); ///
     --h5: calc(18px + 10 * ((100vw - 1920px) / 1280)); ///
-    --h6: calc(14px + 20 * ((100vw - 1920px) / 1280)); ///
+    --h6: calc(14px + 10 * ((100vw - 1920px) / 1280)); ///
 
     /// SECTIONS
     --paddingSection: 80px 40px;
@@ -52,9 +53,11 @@
     ///// MEDIA MOBILE /////
     @media (max-width: 768px) {
         --txt-big: calc(40px + 100 * ((100vw - 360px) / 768)); //
+        --xl: calc(38px + 44 * ((100vw - 360px) / 768)); ///
         --h1: calc(30px + 10 * ((100vw - 360px) / 768)); //
         --h2: calc(20px + 10 * ((100vw - 360px) / 768)); //
         --h3: calc(18px + 10 * ((100vw - 360px) / 768)); //
+        --l: calc(16px + 10 * ((100vw - 360px) / 768)); ///
         --h4: calc(16px + 10 * ((100vw - 360px) / 768));
         --h5: calc(12px + 10 * ((100vw - 360px) / 768));
         --h6: calc(8px + 10 * ((100vw - 360px) / 768)); //
