--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -24,7 +24,7 @@
 
         h1 {
             padding-left: 0.5em;
-            font-size: var(--h1-1);
+            font-size: var(--xxl);
 
             sup {
                 font-size: var(--h5);
@@ -43,7 +43,7 @@
     }
 }
 
-@media(max-width:768px) {
+@media (max-width: 768px) {
     .about {
         margin-bottom: 7em;
 
