--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -20,7 +20,7 @@ block content
 
                     .col-lg-5.about--info
                         h1
-                            sup Hi i'm Matei Denes
+                            sup Matei Denes
                             | “We are not men and women, we are humans, we are nature, we are things, projects are things, they are nature, they are human, they are us.”
 
 
