--- a/src/scss/pages/_connect.scss
+++ b/src/scss/pages/_connect.scss
@@ -14,8 +14,8 @@
         position: absolute;
         right: 30px;
         top: 30px;
-        width: 50px;
-        height: 50px;
+        width: calc(50px + 20 * ((100vw - 1920px) / 1280));
+        height: calc(50px + 20 * ((100vw - 1920px) / 1280));
         background: url(../img/icon-close-white.png) no-repeat center / contain;
         z-index: 9;
     }
@@ -53,15 +53,21 @@
 
 @media (max-width: 768px) {
     .connect {
-        padding: 5em 0 2em;
+        padding: 1em 0;
 
         h1 {
             text-align: center;
             font-size: var(--h1);
+            margin: 1.5em auto 1em;
 
             br {
                 display: none;
             }
+        }
+
+        &--disclaimer {
+            width: 100%;
+            margin-bottom: 3em;
         }
 
         &--form {
