--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -275,7 +275,7 @@
                 // }
 
                 .btn-search {
-                    background-image: url(../../img/icon-search-pink.png);
+                    background-image: url(../img/icon-search-pink.png);
                 }
             }
         }
@@ -299,7 +299,7 @@
         }
 
         .btn-search {
-            background-image: url(../../img/icon-search-white.png);
+            background-image: url(../img/icon-search-white.png);
         }
     }
 
