fix: update grid products

--- a/src/pug/project-home.pug
+++ b/src/pug/project-home.pug
@@ -8,7 +8,7 @@ block content
     -ruta = ""
     include includes/header.pug
 
-    main.project-home
+    main.projects-home
         section.grid
             .container.grid--head
                 h1.text-center PROJECTS
@@ -49,7 +49,7 @@ block content
                             | The capacity to maintain or improve the state and availability of desirable materials or conditions over the long terms into environments.
 
             .container-fluid#quotes-one
-                p.project-home__quotes The capacity to maintain or improve the state and availability of desirable materials or conditions over the long terms into environments.
+                p.projects-home__quotes The capacity to maintain or improve the state and availability of desirable materials or conditions over the long terms into environments.
 
             .container.grid--wrap#grid--wrap-one
                 a(href='project-detail.html')
@@ -103,7 +103,7 @@ block content
                                 li Enviromental
 
             .container-fluid#quotes-two
-                p.project-home__quotes The long terms into environment. Improve the state and availability of desirable materials or conditions over.
+                p.projects-home__quotes The long terms into environment. Improve the state and availability of desirable materials or conditions over.
 
 
     include includes/footer.pug
