--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -483,7 +483,7 @@
             }
 
             &__card {
-                margin-bottom: 1em;
+                margin-bottom: 1em !important;
                 flex-direction: row !important;
 
                 &__images {
