--- a/src/scss/pages/_projects.scss
+++ b/src/scss/pages/_projects.scss
@@ -8,14 +8,10 @@
         margin-bottom: 5em;
     }
 
-    .col-lg-4 {
-        transition: 0.4s ease-in-out all;
-    }
-
     &__card {
-        margin-bottom: 3em;
         position: relative;
         overflow: hidden;
+        margin-bottom: 0 !important;
 
         &.tipo-uno {
             align-items: flex-end;
@@ -51,15 +47,6 @@
             }
         }
 
-        @media (hover: hover) {
-            &:hover {
-                .projects-home__card__hover {
-                    opacity: 1;
-                    transform: rotateZ(180deg) translateX(0);
-                }
-            }
-        }
-
         &__images {
             flex-basis: 90%;
 
@@ -78,19 +65,14 @@
             }
         }
 
-        &__title {
-            flex-basis: 10%;
-            transform: rotateZ(180deg);
-            writing-mode: vertical-lr;
-            font-family: var(--secundaria-regular);
-            color: var(--gris);
-            text-transform: capitalize;
-            // margin: 0 0 0.5em 0;
-        }
-
-        &__hover {
+        &__hover__projects {
+            display: flex;
+            padding: 0 !important;
             position: absolute;
+            top: 0;
+            left: 0;
             transform: rotateZ(180deg) translateX(-100%);
+            // transform: rotateZ(180deg) translateX(0%);
             writing-mode: vertical-rl;
             background: rgba($color: #000, $alpha: 0.8);
             width: 100%;
@@ -100,34 +82,38 @@
             justify-content: flex-end;
             border-radius: 5px;
             overflow: hidden;
-            opacity: 0;
-
+            opacity: 1;
             transition: 0.3s ease-in-out all;
 
-            > h5 {
-                margin: 0;
+            .title-categoria {
                 color: #fff;
-                padding: 0.5em 0;
+                margin: 0.5em 0 0 0.5em;
             }
 
-            &__projects {
+            &__links {
                 display: flex;
-                padding: 0.5em 0;
-                margin-left: 0.5em;
-            }
+                align-items: center;
+                margin: 0 0 0 1em;
 
-            &__title {
-                margin: 0 0 0.5em 0;
-                color: #fff;
+                .projects-home__card__hover__title {
+                    margin: 0;
+                    color: #fff;
+                    padding: 0.5em 0;
 
-                &::after {
-                    content: "\2192";
+                    &::after {
+                        content: "\2192";
+                    }
+
+                    &:last-child {
+                        &::after {
+                            display: none;
+                        }
+                    }
                 }
 
-                &:last-child {
-                    &::after {
-                        display: none;
-                    }
+                &__title {
+                    margin: 0 0 0.5em 0;
+                    color: #fff;
                 }
             }
 
@@ -141,6 +127,59 @@
                 padding: 0.3em 0.5em;
             }
         }
+    }
+}
+
+.projects-grid {
+    .row {
+        row-gap: 60px;
+    }
+
+    .col-lg-4 {
+        transition: 0.4s ease-in-out all;
+        position: relative;
+        overflow: hidden;
+        display: flex;
+        cursor: pointer;
+
+        &:nth-child(even) {
+            align-items: flex-start;
+        }
+
+        &:nth-child(3n + 4) {
+            flex-direction: row-reverse;
+
+            .projects-home__card__title {
+                margin: 0.5em 0.5em 0 0;
+            }
+        }
+
+        @media (hover: hover) {
+            &:hover {
+                .projects-home__card__hover__projects {
+                    opacity: 1;
+                    transform: rotateZ(180deg) translateX(0);
+                }
+            }
+        }
+    }
+
+    &--wrap {
+        width: 100%;
+    }
+
+    .projects-home__card__title {
+        flex-basis: 10%;
+        transform: rotateZ(180deg);
+        writing-mode: vertical-lr;
+        font-family: var(--secundaria-regular);
+        color: var(--gris);
+        text-transform: capitalize;
+        margin: 0 0 0.5em 0;
+    }
+
+    .projects-home__card__images {
+        flex-basis: auto;
     }
 }
 
@@ -208,6 +247,17 @@
                     }
                 }
             }
+        }
+    }
+
+    .projects-grid {
+        .row {
+            row-gap: 30px;
+        }
+
+        .col-lg-4 {
+            align-items: flex-end !important;
+            flex-direction: row !important;
         }
     }
 }
