hotfix: hovr mobile

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -107,8 +107,9 @@ block content
                                     .projects-home__card__images__img
                                         img.img-fluid(src='img/images1.jpg' alt)
 
-                        h3.projects-home__card__title Typology
-
+                        h3.projects-home__card__title 
+                            | Typology
+                            .btnHoverGrid
 
                         .projects-home__card__hover__projects
                             h5.title-categoria PROJECTS
@@ -124,6 +125,9 @@ block content
                                     h5.projects-home__card__hover__title Agricultura
 
                             h4 Typology
+                                .btnHoverGridInt
+
+
 
                     .col-lg-4.col-12
                         .projects-grid--wrap
