hotfix: hover after

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -591,6 +591,7 @@
                     place-items: center;
                     color: #fff;
                     font-size: x-large;
+                    will-change: auto;
 
                     &::after {
                         content: "+";
